Do not copy compare_by_identity flag for non-empty hashes in Hash.[]

It wasn't copied for empty hashes, and Hash.[] doesn't copy the
default value, so copying the compare_by_identity flag does not
make sense.

Partially Fixes [Bug #19113]